# ghc-plugs-out

./: .gitignore  README.md  README.rst  build-opts.sh  build-wiring.sh  build.sh  cabal.project  changelog.md  defaults.dhall  ghc-plugs-out.cabal  package.yaml  stack.yaml  undefined-plugin.cabal
.github/workflows/: cabal.yml  hlint.yml
init/: package.dhall  package.yaml  undefined-init-plugin.cabal
init/plugin/Undefined/Init/: Plugin.hs
plugin-test/: Main.hs
plugin/Undefined/: Plugin.hs
plugins/call-count/CallCount/: Plugin.hs  TcPlugin.hs
plugins/call-count/CallCount/Impure/: Plugin.hs
plugins/call-count/CallCount/Pure/: Plugin.hs  Plugin1.hs  Plugin2.hs
plugins/init/Undefined/Init/: Plugin.hs
plugins/noop/NoOp/: Plugin.hs
plugins/solve/Undefined/Solve/: Plugin.hs
plugins/stop/Undefined/Stop/: Plugin.hs
solve/: package.dhall  package.yaml  undefined-solve-plugin.cabal
solve/plugin-test/: Main.hs
solve/plugin/Undefined/Solve/: Plugin.hs
stop/: package.dhall  package.yaml  undefined-stop-plugin.cabal
stop/plugin/Undefined/Stop/: Plugin.hs
stop/test-suite/: Main.hs
test-suites/counter/: Main.hs
test-suites/counter-foo-bar-main/: Bar.hs  Foo.hs
test-suites/counter-foobar-main/: FooBar.hs  Main.hs
test-suites/counter-in-line/: Main.hs
test-suites/counter-in-line-each/: Main.hs
test-suites/counter-in-turn/: Main.hs
test-suites/counter-in-turn-each/: Main.hs
test-suites/counter-main-named/: Main.hs
test-suites/undef-init/: Main.hs
test-suites/undef-init-carefree/: Main.hs
test-suites/undef-solve-carefree/: Main.hs
test-suites/undef-stop-carefree/: Main.hs
test-suites/wireup-by-option/: Main.hs
test-suites/wireup-by-pragma/: Main.hs
test-suites/wireup-impure-by-pragma/: Main.hs
test-suites/wireup-pure-by-both/: Main.hs
