cabal-version: 3.0

name:           ghc-plugs-out
version:        1.0.0.0
author:         Phil de Joux
maintainer:     phil.dejoux@blockscope.com
copyright:      © 2020 Phil de Joux, © 2020 Block Scope Limited
license:        MPL-2.0
license-file:   LICENSE.md
tested-with:    GHC == 8.10.1
build-type:     Simple

library undefined-init-plugin
  exposed-modules:
      Undefined.Init.Plugin
  hs-source-dirs:
      init/plugin
  ghc-options: -Wall
  build-depends:
      base
    , ghc
  default-language: Haskell2010

library undefined-solve-plugin
  exposed-modules:
      Undefined.Solve.Plugin
  hs-source-dirs:
      solve/plugin
  ghc-options: -Wall
  build-depends:
      base
    , ghc
  default-language: Haskell2010

library undefined-stop-plugin
  exposed-modules:
      Undefined.Stop.Plugin
  hs-source-dirs:
      stop/plugin
  ghc-options: -Wall
  build-depends:
      base
    , ghc
  default-language: Haskell2010

test-suite test-undefined-init
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      init/test-suite
  ghc-options: -Wall
  build-depends:
      base
    , undefined-init-plugin
  default-language: Haskell2010

test-suite test-undefined-solve
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      solve/test-suite
  ghc-options: -Wall
  build-depends:
      base
    , undefined-solve-plugin
  default-language: Haskell2010

test-suite test-undefined-stop
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      stop/test-suite
  ghc-options: -Wall
  build-depends:
      base
    , undefined-stop-plugin
  default-language: Haskell2010
