cabal-version: 3.0

name:           ghc-plugs-out
version:        1.0.0.0
author:         Phil de Joux
maintainer:     phil.dejoux@blockscope.com
copyright:      © 2020 Phil de Joux, © 2020 Block Scope Limited
license:        MPL-2.0
license-file:   LICENSE.md
tested-with:    GHC == 8.10.1
build-type:     Simple

library no-op-plugin
  exposed-modules:
      NoOp.Plugin
  hs-source-dirs:
      plugins/noop
  ghc-options: -Wall
  build-depends:
      base
    , ghc
  default-language: Haskell2010

library undefined-init-plugin
  exposed-modules:
      Undefined.Init.Plugin
  hs-source-dirs:
      plugins/init
  ghc-options: -Wall
  build-depends:
      base
    , ghc
    , no-op-plugin
  default-language: Haskell2010

library undefined-solve-plugin
  exposed-modules:
      Undefined.Solve.Plugin
  hs-source-dirs:
      plugins/solve
  ghc-options: -Wall
  build-depends:
      base
    , ghc
    , no-op-plugin
  default-language: Haskell2010

library undefined-stop-plugin
  exposed-modules:
      Undefined.Stop.Plugin
  hs-source-dirs:
      plugins/stop
  ghc-options: -Wall
  build-depends:
      base
    , ghc
    , no-op-plugin
  default-language: Haskell2010

library call-count-plugin
  exposed-modules:
      CallCount.Plugin
  hs-source-dirs:
      plugins/call-count
  ghc-options: -Wall
  build-depends:
      base
    , ghc
    , th-printf
  default-language: Haskell2010

test-suite test-undefined-init
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-init
  ghc-options: -Wall
  build-depends:
      base
    , undefined-init-plugin
  default-language: Haskell2010

test-suite test-undefined-init-carefree
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-init-carefree
  ghc-options: -Wall
  build-depends:
      base
    , undefined-init-plugin
  default-language: Haskell2010

test-suite test-undefined-solve
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-solve
  ghc-options: -Wall
  build-depends:
      base
    , undefined-solve-plugin
  default-language: Haskell2010

test-suite test-undefined-solve-carefree
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-solve-carefree
  ghc-options: -Wall
  build-depends:
      base
    , undefined-solve-plugin
  default-language: Haskell2010

test-suite test-undefined-stop
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-stop
  ghc-options: -Wall
  build-depends:
      base
    , undefined-stop-plugin
  default-language: Haskell2010

test-suite test-undefined-stop-carefree
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-stop-carefree
  ghc-options: -Wall
  build-depends:
      base
    , undefined-stop-plugin
  default-language: Haskell2010

test-suite test-wireup-by-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-by-options
  ghc-options: -Wall
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010

test-suite test-wireup-by-pragma
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-by-pragma
  ghc-options: -Wall
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010

test-suite test-wireup-by-both
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-by-pragma
  ghc-options: -Wall
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010
