cabal-version: 3.0

name:           ghc-plugs-out
version:        1.0.0.0
author:         Phil de Joux
maintainer:     phil.dejoux@blockscope.com
copyright:      © 2020 Phil de Joux, © 2020 Block Scope Limited
license:        MPL-2.0
license-file:   LICENSE.md
tested-with:    GHC == 8.10.1
build-type:     Simple

common opts
  ghc-options: -Wall -fhide-source-paths

library no-op-plugin
  import: opts
  exposed-modules:
      NoOp.Plugin
  hs-source-dirs:
      plugins/noop
  build-depends:
      base
    , ghc
  default-language: Haskell2010

library undefined-init-plugin
  import: opts
  exposed-modules:
      Undefined.Init.Plugin
  hs-source-dirs:
      plugins/init
  build-depends:
      base
    , ghc
    , no-op-plugin
  default-language: Haskell2010

library undefined-solve-plugin
  import: opts
  exposed-modules:
      Undefined.Solve.Plugin
  hs-source-dirs:
      plugins/solve
  build-depends:
      base
    , ghc
    , no-op-plugin
  default-language: Haskell2010

library undefined-stop-plugin
  import: opts
  exposed-modules:
      Undefined.Stop.Plugin
  hs-source-dirs:
      plugins/stop
  build-depends:
      base
    , ghc
    , no-op-plugin
  default-language: Haskell2010

library call-count-plugin
  import: opts
  exposed-modules:
      CallCount.TcPlugin
      CallCount.Pure.Plugin
      CallCount.Impure.Plugin
  hs-source-dirs:
      plugins/call-count
  build-depends:
      base
    , ghc
    , th-printf
    , no-op-plugin
  default-language: Haskell2010

test-suite test-undefined-init
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-init
  build-depends:
      base
    , undefined-init-plugin
  default-language: Haskell2010

test-suite test-undefined-init-carefree
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-init-carefree
  build-depends:
      base
    , undefined-init-plugin
  default-language: Haskell2010

test-suite test-undefined-solve
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-solve
  build-depends:
      base
    , undefined-solve-plugin
  default-language: Haskell2010

test-suite test-undefined-solve-carefree
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-solve-carefree
  build-depends:
      base
    , undefined-solve-plugin
  default-language: Haskell2010

test-suite test-undefined-stop
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-stop
  build-depends:
      base
    , undefined-stop-plugin
  default-language: Haskell2010

test-suite test-undefined-stop-carefree
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/undef-stop-carefree
  build-depends:
      base
    , undefined-stop-plugin
  default-language: Haskell2010

test-suite test-wireup-pure-by-option
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-pure-by-option
  ghc-options: -Wall -fplugin CallCount.Pure.Plugin
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010

test-suite test-wireup-pure-by-pragma
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-pure-by-pragma
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010

test-suite test-wireup-pure-by-both
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-pure-by-pragma
  ghc-options: -Wall -fplugin CallCount.Pure.Plugin
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010

test-suite test-wireup-impure-by-option
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-impure-by-option
  ghc-options: -Wall -fplugin CallCount.Impure.Plugin
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010

test-suite test-wireup-impure-by-pragma
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-impure-by-pragma
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010

test-suite test-wireup-impure-by-both
  import: opts
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test-suites/wireup-impure-by-pragma
  ghc-options: -Wall -fplugin CallCount.Impure.Plugin
  build-depends:
      base
    , call-count-plugin
  default-language: Haskell2010
